@@ -3,8 +3,6 @@ package edu.colorado.phet.sugarandsaltsolutions.common.model;
 
 import java.awt.*;
 
-import edu.colorado.phet.common.phetcommon.model.property.Property;
-import edu.colorado.phet.common.phetcommon.model.property.doubleproperty.CompositeDoubleProperty;
 import edu.colorado.phet.common.phetcommon.model.property.doubleproperty.DoubleProperty;
 
 /**
@@ -16,24 +14,17 @@ public class Water {
     //volume in SI (m^3).  Start at 1 L (halfway up the 2L beaker).  Note that 0.001 cubic meters = 1L
     public final DoubleProperty volume = new DoubleProperty( 0.001 );
     private final Beaker beaker;
-    private final Property<Double> solidPrecipitateDisplacedVolume = new Property<Double>( 0.0 );
-    public final CompositeDoubleProperty displacedVolume;
 
     public Water( Beaker beaker ) {
         this.beaker = beaker;
-        displacedVolume = volume.plus( solidPrecipitateDisplacedVolume );
     }
 
     //Get the shape this water takes in its containing beaker
-    public Shape getShape() {
-        return beaker.getFluidShape( displacedVolume.get() );
+    public Shape getShape( double displacedVolume ) {
+        return beaker.getFluidShape( displacedVolume );
     }
 
     public void reset() {
         volume.reset();
-    }
-
-    public double getSolidSoluteDisplacementVolume() {
-        return solidPrecipitateDisplacedVolume.get();
     }
 }
